# plebis-fe

./: .gitignore  Cargo.toml  Dockerfile  app.js  package.json
src/: main.rs  main_import.rs
static/: index.html
templates/: results.hbs  results.html
