[package]
authors = ["Kenan Sulayman <kenan@sly.mn>"]
name = "search"
version = "0.1.0"

[dependencies]
bart = "0.1.4"
bart_derive = "0.1.4"
exonum_leveldb = "0.9.1"
leveldb-sys = "^2.0.1"
progress = "0.2.0"
rocket = "0.3.2"
rocket_codegen = "0.3.2"
rocket_contrib = "0.3.2"
serde = "1.0.14"
serde_derive = "1.0.14"
serde_json = "1.0.3"
tantivy = "0.4.3"
tempdir = "0.3.5"
