[package]
authors = ["Kenan Sulayman <kenan@sly.mn>"]
name = "plebis"
version = "0.1.0"

[dependencies]
bart = "0.1.4"
bart_derive = "0.1.4"
exonum_leveldb = "0.9.1"
katana = "1.0.2"
leveldb-sys = "2.0.1"
progress = "0.2.0"
regex = "0.2.3"
rocket = "0.3.5"
rocket_codegen = "0.3.5"
rocket_contrib = "0.3.5"
serde = "1.0.24"
serde_derive = "1.0.14"
serde_json = "1.0.8"
tantivy = "0.4.3"
tempdir = "0.3.5"
